--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
   - Code Docs:
     - Java: coding/my-first-java-file.md
   - About:
+    - Current Projects: about/projects.md
     - About Me: about/about.md
     - Childhood: about/childhood.md
   - Tags: tags.md
