--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ theme:
     - navigation.tabs.sticky
     - navigation.sections
     - navigation.expand
-    # - toc.integrate
+    - toc.integrate
     - navigation.top
     - search.suggest
     - search.highlight
